--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 2.7.6
+@version 2.7.7
 @updateURL https://rawgit.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -138,7 +138,7 @@
 
 /*GNU General Public License v3.0.*/
 
-/*2.7.6*/
+/*2.7.7*/
 
 	/*Main color variables*/
 	:root
@@ -344,7 +344,7 @@
 	}
 
 	/*Background for the entire page*/
-	html
+	html, ytd-browse, ytd-watch, ytd-search, ytd-app, #columns.ytd-watch-flexy
 	{
 		background-color: var(--main-background) !important;
 	}
@@ -516,12 +516,6 @@
 		color: var(--dimmer-text) !important;
 	}
 
-	/*Main page*/
-	ytd-browse, ytd-watch, ytd-search, ytd-app
-	{
-		background: var(--main-background) !important;
-	}
-
 	/*Channel page*/
 	/*header*/
 	#channel-header.ytd-c4-tabbed-header-renderer, #tabs-inner-container.ytd-c4-tabbed-header-renderer
@@ -586,12 +580,14 @@
 	}
 	#author-text,
 	.more-button, .less-button,
-	.align-by-text.ytd-backstage-comments-renderer
+	.align-by-text.ytd-backstage-comments-renderer,
+	#toggle.ytd-grid-renderer
 	{
 		color: var(--main-text) !important;
 	}
 	.more-button:hover, .less-button:hover,
-	.align-by-text.ytd-backstage-comments-renderer:hover
+	.align-by-text.ytd-backstage-comments-renderer:hover,
+	#toggle.ytd-grid-renderer:hover
 	{
 		color: var(--main-color) !important;
 	}
