--- a/YouTubeDeepDarkClassic.user.css
+++ b/YouTubeDeepDarkClassic.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Classic
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 2.3.4
+@version 2.3.5
 @updateURL https://rawgit.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkClassic.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme) 
 @author RaitaroH
@@ -26,8 +26,10 @@
 	"Ubuntu_grey": "#EF7847",
 	"Ubuntu_purple": "#EF7847",
 	"Orange": "#ff6905",
-	"Jisho_夜明け":  "#EF7D6C"
+	"Jisho_夜明け": "#EF7D6C",
+	"Custom": "/*[[custom-main-color]]*\/"
 }
+@var color custom-main-color "Custom main color" #00adee"
 
 @var select mainBackground 'Main background color' {
 	"DeepDark": "#111111",
@@ -46,8 +48,10 @@
 	"Ubuntu_grey": "#312D2A",
 	"Ubuntu_purple": "#2C071A",
 	"Orange": "#0a0400",
-	"Jisho_夜明け":  "#332222"
+	"Jisho_夜明け": "#332222",
+	"Custom": "/*[[custom-main-background]]*\/"
 }
+@var color custom-main-background "Custom main background" "#111111"
 
 @var select secondBackground 'Second background color' {
 	"DeepDark": "#181818",
@@ -66,8 +70,10 @@
 	"Ubuntu_grey": "#3D3C38",
 	"Ubuntu_purple": "#430B28",
 	"Orange": "#0e0702",
-	"Jisho_夜明け":  "#2A1B1B"
+	"Jisho_夜明け": "#2A1B1B",
+	"Custom": "/*[[custom-second-background]]*\/"
 }
+@var color custom-second-background "Custom second background" "#181818"
 
 @var select hoverBackground 'Hover background color' {
 	"DeepDark": "#232323",
@@ -86,8 +92,10 @@
 	"Ubuntu_grey": "#59564D",
 	"Ubuntu_purple": "#520D30",
 	"Orange": "#110903",
-	"Jisho_夜明け":  "#863B2F"
+	"Jisho_夜明け": "#863B2F",
+	"Custom": "/*[[custom-hover-background]]*\/"
 }
+@var color custom-hover-background "Custom hover background" "#232323"
 
 @var select mainText 'Main text color' {
 	"DeepDark": "#eff0f1",
@@ -106,10 +114,12 @@
 	"Ubuntu_grey": "#F2F1EF",
 	"Ubuntu_purple": "#F2F1EF",
 	"Orange": "#fff9f5",
-	"Jisho_夜明け":  "#EFB26C"
+	"Jisho_夜明け": "#EFB26C",
+	"Custom": "/*[[custom-main-text]]*\/"
 }
+@var color custom-main-text "main-text" "#eff0f1"
 
-@var select dimerText 'Secondary text color' {
+@var select dimmerText 'Secondary text color' {
 	"DeepDark": "#CCCCCC",
 	"BreezeDark": "#bdc3c7",
 	"Vertex Dark": "#AEAFB0",
@@ -126,8 +136,10 @@
 	"Ubuntu_grey": "#E6E5E3",
 	"Ubuntu_purple": "#E6E5E3",
 	"Orange": "#ffede1",
-	"Jisho_夜明け":  "#986E3F"
+	"Jisho_夜明け": "#986E3F",
+	"Custom": "/*[[custom-dimmer-text]]*\/"
 }
+@var color custom-dimmer-text "dimmer-text" "#CCCCCC"
 
 ==/UserStyle== */
 
@@ -136,8 +148,6 @@
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
 /*GNU General Public License v3.0.*/
-
-/*2.3.4*/
 
 	/*Main color variables*/
 	:root
@@ -148,7 +158,7 @@
 		--second-background: /*[[secondBackground]]*/;
 		--hover-background: /*[[hoverBackground]]*/;
 		--main-text: /*[[mainText]]*/;
-		--dimer-text: /*[[dimerText]]*/;
+		--dimmer-text: /*[[dimmerText]]*/;
 
 		/*DeepDark colors*/
 		/*
@@ -157,7 +167,7 @@
 		--second-background: #181818;
 		--hover-background: #232323;
 		--main-text: #eff0f1;
-		--dimer-text: #CCCCCC;
+		--dimmer-text: #CCCCCC;
 		*/
 
 		/*KDE colors*/
@@ -167,7 +177,7 @@
 		--second-background: #2a2e32;
 		--hover-background: #31363b;
 		--main-text: #eff0f1;
-		--dimer-text: #bdc3c7;
+		--dimmer-text: #bdc3c7;
 		*/
 
 		/*Vertex Dark colors*/
@@ -177,7 +187,7 @@
 		--second-background: #353638;
 		--hover-background: #515254;
 		--main-text: #F3F3F5;
-		--dimer-text: #AEAFB0;
+		--dimmer-text: #AEAFB0;
 		*/
 
 		/*Arc Dark colors*/
@@ -187,7 +197,7 @@
 		--second-background: #383C4A;
 		--hover-background: #414A59;
 		--main-text: #C1C8D1;
-		--dimer-text: #B3BAC5;
+		--dimmer-text: #B3BAC5;
 		*/
 
 		/*Firefox Dark colors*/
@@ -197,7 +207,7 @@
 		--second-background: #181D20;
 		--hover-background: #353A44;
 		--main-text: #E3EEF9;
-		--dimer-text: #606376;
+		--dimmer-text: #606376;
 		*/
 
 		/*Firefox57 Dark colors*/
@@ -207,7 +217,7 @@
 		--second-background: #252526;
 		--hover-background: #323234;
 		--main-text: #F9F9FA;
-		--dimer-text: #D0D0D0;
+		--dimmer-text: #D0D0D0;
 		*/
 
 		/*Discord colors*/
@@ -217,7 +227,7 @@
 		--second-background: #2F3136;
 		--hover-background: #484B51;
 		--main-text: #FFFFFF;
-		--dimer-text: #ADA8AA;
+		--dimmer-text: #ADA8AA;
 		*/
 
 		/*YouTube colors*/
@@ -227,7 +237,7 @@
 		--second-background: #232323;
 		--hover-background: #343434;
 		--main-text: #E1E1E1;
-		--dimer-text: #7F7F7F;
+		--dimmer-text: #7F7F7F;
 		*/
 
 		/*Mint-Y-Dark colors*/
@@ -237,7 +247,7 @@
 		--second-background: #383838;
 		--hover-background: #404040;
 		--main-text: #FFFFFF;
-		--dimer-text: #D5DADA;
+		--dimmer-text: #D5DADA;
 		*/
 
 		/*9anime colors*/
@@ -247,7 +257,7 @@
 		--second-background: #17151C;
 		--hover-background: #1E1C25;
 		--main-text: #B4B4B4;
-		--dimer-text: #747474;
+		--dimmer-text: #747474;
 		*/
 
 		/*Black and white*/
@@ -257,7 +267,7 @@
 		--second-background: #0a0a0a;
 		--hover-background: #0f0f0f;
 		--main-text: #b4b4b4;
-		--dimer-text: #828282;
+		--dimmer-text: #828282;
 		*/
 
 		/*Yellow (colors from petrocompletions)*/
@@ -267,7 +277,7 @@
 		--second-background: #202222;
 		--hover-background: #353838;
 		--main-text: #EFF0F1;
-		--dimer-text: #9F9999;
+		--dimmer-text: #9F9999;
 		*/
 
 		/*Yellow 2*/
@@ -277,7 +287,7 @@
 		--second-background: #0c0a04;
 		--hover-background: #0f0d05;
 		--main-text: #fffdf5;
-		--dimer-text: #fff8e1;
+		--dimmer-text: #fff8e1;
 		*/
 
 		/*Ubuntu grey colors*/
@@ -287,7 +297,7 @@
 		--second-background: #3D3C38;
 		--hover-background: #59564D;
 		--main-text: #F2F1EF;
-		--dimer-text: #E6E5E3;
+		--dimmer-text: #E6E5E3;
 		*/
 
 		/*Ubuntu purple colors*/
@@ -297,7 +307,7 @@
 		--second-background: #430B28;
 		--hover-background: #520D30;
 		--main-text: #F2F1EF;
-		--dimer-text: #E6E5E3;
+		--dimmer-text: #E6E5E3;
 		*/
 
 		/*Orange*/
@@ -307,7 +317,7 @@
 		--second-background: #0e0702;
 		--hover-background: #110903;
 		--main-text: #fff9f5;
-		--dimer-text: #ffede1;
+		--dimmer-text: #ffede1;
 		*/
 
 		/*Jisho 夜明け colors https://userstyles.org/styles/115621/jisho*/
@@ -317,7 +327,7 @@
 		--second-background: #2A1B1B;
 		--hover-background: #863B2F;
 		--main-text: #EFB26C;
-		--dimer-text: #986E3F;
+		--dimmer-text: #986E3F;
 		*/
 
 		--border-color: var(--hover-background);
@@ -651,7 +661,7 @@
 		text-shadow: none  !important;
 	}
 	.video-list .video-list-item .title, .yt-dialog-content,.yt-video-picker-modal h3,#collaboration-settings .revoke-links-container > *,#collaboration-settings .create-invite-link > *,.yt-uix-form-input-fluid .yt-uix-form-input-text, .yt-uix-form-input-fluid .yt-uix-form-input-textarea,.country-inline,.HPHGCHB-K-h .datePickerMonth,#pl-header .pl-header-description-text,.yt-uix-clickcard-card-content, .yt-uix-hovercard-card-content,.ytp-ce-channel-metadata,.yt-uix-button-subscribe-branded + .yt-subscription-button-subscriber-count-branded-horizontal, .yt-uix-button-subscribe-unbranded + .yt-subscription-button-subscriber-count-unbranded-horizontal, .yt-uix-button-subscribe-branded + .yt-uix-subscription-preferences-button + .yt-subscription-button-subscriber-count-branded-horizontal, .yt-uix-button-subscribed-branded + .yt-subscription-button-subscriber-count-branded-horizontal.subscribed, .yt-uix-button-subscribed-unbranded + .yt-subscription-button-subscriber-count-unbranded-horizontal.subscribed, .yt-uix-button-subscribed-branded + .yt-uix-subscription-preferences-button + .yt-subscription-button-subscriber-count-branded-horizontal.subscribed,.analytics-sparkline-card .infos .title,.dashboard-widget-header h2,.vm-video-actions-delete-warning,#video-settings-section,.iph-dialog-content,.yt-default h1, .yt-default h2, .yt-default h3, .yt-default h4, .yt-default h5, .yt-default h6, h1.yt, h2.yt, h3.yt, h4.yt, h5.yt, h6.yt,.audio-ui-featured-row td,.enhance-effect .slider-readout, .enhance-effect .property-title,#player-and-info-pane #video-info dd,#player-and-info-pane #video-info dt,.HPHGCHB-W-q .HPHGCHB-W-F,.HPHGCHB-ob-d,.HPHGCHB-P-e h3,.metadata-share-text,.upload-other-options-list .upload-option-text,.Zm-Ob-pi > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(1) > table:nth-child(1) > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(2),.live-chat-widget .comment-text,.pl-video-annotation-container,.yt-uix-expander-collapsed .yt-uix-expander-collapsed-body,#yt-lang-alert-content,.idle-message, .no-results-message,.audio-library-tab-subtitle,.audiolibrary-column-title, .audiolibrary-column-title-expand,.HPHGCHB-O-b h3,.HPHGCHB-K-f .HPHGCHB-K-j input,.HPHGCHB-g-f,#comment-settings .comment-settings-label,.account-settings-info,h3.account-section-header,.account-settings-item .account-settings-label,.yt-uix-form-input-select-element option,.yt-uix-form-input-select-content,.account-status-copyright-status-v2-details-table-type-column, .account-status-copyright-status-v2-details-table-event-column, .account-status-copyright-status-v2-details-table-content-column, .account-status-copyright-status-v2-title, .account-status-community-guidelines-status-v2-details-table-type-column, .account-status-community-guidelines-status-v2-details-table-event-column, .account-status-community-guidelines-status-v2-details-table-content-column, .account-status-community-guidelines-status-v2-title, .account-status-v2-strike-type-label,#comment-settings .comment-settings-title,.yt-alert-naked .yt-alert-content,.subscription-confirmation-dialog .subscription-confirmation-display-name,.yt-dialog-base .yt-dialog-header .yt-dialog-title,#watch7-sidebar .watch-sidebar-head,.secondary-header-contents .nav-text,#yt-uix-videoactionmenu-menu h3,.yt-subscription-button-subscriber-count-branded-horizontal,.add-to-widget .create-playlist-item,.yt-ui-menu-item,.yt-uix-button-menu .yt-uix-button-menu-item,.ytp-cards-teaser .ytp-cards-teaser-text,.yt-uix-button-subscribed-branded + .yt-subscription-button-subscriber-count-branded-horizontal.subscribed,.yt-uix-button-subscribed-branded + .yt-uix-subscription-preferences-button + .yt-subscription-button-subscriber-count-branded-horizontal.subscribed,.yt-uix-button.yt-uix-button-subscribed-branded,.exp-wn-font-14 .related-list-item span.title,#eow-description,.exp-responsive #content .yt-uix-button-subscription-container .yt-subscriber-count,#body #uploaded-videos,yt-card .yt-uix-button-expander,yt-card .yt-uix-button-expander:hover,hr, html, i, iframe, img, ins, kbd, label, legend, li, menu, object, ol, p, pre, q, s, samp, small, strike, strong, sub, abbr, acronym, address, applet, b, big, blockquote,.comment-section-header-renderer,div.yt-ui-ellipsis:nth-child(1),.yt-uix-form-input-text,.iv-card h2,.ytp-ce-website-title, .guide-item, .yt-uix-button, .yt-new-promo-page-header h1, .yt-new-promo-page-section-text h2, .yt-lockup .yt-lockup-meta a, .yt-lockup .yt-lockup-description a, .yt-lockup .yt-lockup-byline a, .pl-video-owner a, .pl-video-added-by, .pl-video-added-by a, .video-list .video-list-item .description, .video-list .video-list-item .stat, .comment-history-entry-renderer-content{
-		 color: var(--dimer-text) !important;
+		 color: var(--dimmer-text) !important;
 	}
 	/*New titles*/
 	.yt-lockup .yt-lockup-byline a, .pl-video-owner a, .video-list .video-list-item .stat.attribution, .comment-author-text, .lohp-video-metadata .yt-user-name, span[class="about-channel-link-text"] {
@@ -664,17 +674,17 @@
 	}
 	/*New metadata*/
 	.comment-renderer-header .comment-renderer-time a, .lohp-video-metadata span[class="username-prepend"], span[class="business-email-label"] {
-		color: var(--dimer-text) !important;
+		color: var(--dimmer-text) !important;
 		opacity: .8;
 	}
 	.lohp-video-metadata, .lohp-video-metadata .view-count, .shelf-description, .shelf-annotation, .about-stats > *, .about-metadata-label {
 
-		color: var(--dimer-text) !important;
+		color: var(--dimmer-text) !important;
 		opacity: 1 !important;
 	}
 
 	.yt-lockup-description.yt-ui-ellipsis.yt-ui-ellipsis-2, .yt-lockup-description.yt-ui-ellipsis.yt-ui-ellipsis-2 {
-		color: var(--dimer-text);
+		color: var(--dimmer-text);
 		opacity: .8;
 	}
 
@@ -832,7 +842,7 @@
 		top: 20px !important;
 	}
 	#P-content h2,#P-content h3,.P-implang,#P-settings option{
-		color: var(--dimer-text) !important;
+		color: var(--dimmer-text) !important;
 	}
 	#P-content input + label::before,.P-horz {
 		border-color: var(--border-color) !important;
@@ -900,7 +910,7 @@
 	}
 	.yt-live-chat-text-input-field-renderer-0 #label.yt-live-chat-text-input-field-renderer, .yt-live-chat-text-input-field-renderer-1 #label.yt-live-chat-text-input-field-renderer, .yt-live-chat-text-message-renderer-0 #timestamp.yt-live-chat-text-message-renderer, .yt-live-chat-text-message-renderer-1 #timestamp.yt-live-chat-text-message-renderer, .yt-live-chat-text-message-renderer #timestamp.yt-live-chat-text-message-renderer, .yt-live-chat-message-input-field-renderer #label.yt-live-chat-text-input-field-renderer, #deleted-state.yt-live-chat-text-message-renderer, #show-original.yt-live-chat-text-message-renderer, yt-live-chat-text-message-renderer[is-deleted] #message.yt-live-chat-text-message-renderer, #input.yt-live-chat-text-input-field-renderer
 	{
-		color: var(--dimer-text) !important;
+		color: var(--dimmer-text) !important;
 	}
 	.iron-icon-0, .ytd-button-renderer-0 #button.ytd-button-renderer, .iron-icon
 	{
@@ -943,7 +953,7 @@
 	}
 	.yt-live-chat-message-renderer-0 #subtext.yt-live-chat-message-renderer, .yt-live-chat-message-renderer-1 #subtext.yt-live-chat-message-renderer, #label.yt-live-chat-text-input-field-renderer, .input-content.paper-input-container input, .input-content.paper-input-container textarea, .input-content.paper-input-container iron-autogrow-textarea, .input-content.paper-input-container .paper-input-input
 	{
-		color: var(--dimer-text) !important;
+		color: var(--dimmer-text) !important;
 	}
 	.ytd-button-renderer-1.style-dark[is-paper-button]:hover, .ytd-button-renderer-0.style-dark[is-paper-button]:hover, #search-panel.yt-emoji-picker-renderer
 	{
@@ -977,7 +987,7 @@
 	}
 	.yt-new-promo-page-section-text, .yt-new-promo-page-header
 	{
-		color: var(--dimer-text);
+		color: var(--dimmer-text);
 	}
 	.yt-new-promo-page-button
 	{
@@ -1000,20 +1010,20 @@
 	}
 	/* Account settings colors */
 	.desktop-notifications .browser{
-		border: 1px solid var(--dimer-text);
+		border: 1px solid var(--dimmer-text);
 		background: transparent;
 	}
 	.account-content, #creator-sidebar.single-section .creator-sidebar-section .creator-sidebar-item-link, h2.account-section-header{
-		color: var(--dimer-text);
+		color: var(--dimmer-text);
 	}
 
 
 	/*Text and link color for S?-E? */
 	.standalone-collection-badge-renderer-text, .standalone-collection-badge-renderer-text a {
-		color: var(--dimer-text);
+		color: var(--dimmer-text);
 	}
 	.standalone-collection-badge-renderer-text {
-		color: var(--dimer-text);
+		color: var(--dimmer-text);
 		opacity: .8;
 	}
 
@@ -1034,7 +1044,7 @@
     border: 1px solid var(--main-background) !important;
   }
   .progress-bar-text, .progress-bar-text-done, .progress-bar-text-upload-queued{
-    color: var(--dimer-text) !important;
+    color: var(--dimmer-text) !important;
   }
   .progress-bar-background{
     border: none;
@@ -1184,7 +1194,7 @@
     fill: var(--second-background);
   }
   svg text[fill="#444444"]{
-    fill: var(--dimer-text);
+    fill: var(--dimmer-text);
     stroke: none;
   }
   svg g text{
@@ -1228,7 +1238,7 @@
 	/*Footer links*/
 	#footer-links-primary a, #footer a
 	{
-		color: var(--dimer-text) !important;
+		color: var(--dimmer-text) !important;
 	}
 
 	/*Search suggestions (from material)*/
