--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace gitlab.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://gitlab.com/RaitaroH/YouTube-DeepDark
-@version 2.8.0
+@version 2.8.1
 @updateURL https://gitlab.com/RaitaroH/YouTube-DeepDark/raw/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -1794,6 +1794,11 @@
 	{
 		color: var(--dimmer-text) !important;
 	}
+	/*paid messages*/
+	#content.yt-live-chat-paid-message-renderer #message
+	{
+        color: black !important;
+    }
 	#message.yt-live-chat-text-message-renderer a.yt-live-chat-text-message-renderer
 	{
 		color: var(--main-color) !important;
